space-tourism-website-main/space-tourism-website-main/styles/destination_moon.css
@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap');


* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    max-width: 100%;
}

:root {
    --primary-color: white;
}



body {
    background-color: black;
    overflow-x: hidden;
    color: var(--primary-color); 
    font-family: Barlow;
    background-repeat: no-repeat;
    background-size: cover;
}

.head_head {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1.5rem;
    list-style-type: none;
}

.container {
    scroll-snap-type: y mandatory;
    /* width: 100%; */
    /* box-sizing: border-box; */
}

section {
    position: relative;
    scroll-snap-align: start;
    max-width: 1440px;
    margin-left: 1rem;
    margin-right: 1rem;
}

/* HERO SECTION */

.hero {
    display: flex;
    flex-direction: column;
    gap: 30px;
}

.hero-p {
    display: flex;
    justify-content: center;
    gap: 20px;
    color: #FFF;
    font-family: "Barlow Condensed";
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
}

.hero-img {
    display: flex;
    justify-content: center;
    align-items: center;
    align-self: center;
    width: 259px;
    height: 259px;
    flex-shrink: 0;
}

.hero-p1 {
    color: rgb(77, 79, 87);
}

.hero-list {
    list-style-type: none;
    display: flex;
    justify-content: center;
    gap: 20px;
    color: #D0D6F9;
    font-family: "Barlow Condensed";
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
}

.hero-list1 {
    color: white;
    padding-bottom: 10px;
    border-bottom: 3px solid white;
}

.section-2 {
    margin-top: 40px;
}

.section-2-p {
    color: #FFF;
    text-align: center;
    font-family: Bellefair;
    font-size: 56px;
    font-weight: 400;
}

.section-2-p1 {
    color: #D0D6F9;
    text-align: center;
    font-family: Barlow;
    font-size: 15px;
    font-weight: 400;
    width: 327px;
}

/* SECTION 3 */

.section-3 {
    margin-top: 40px;
    border-top: 2px solid #383B4B ;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    gap: 25px;
    margin-bottom: 25px;
}

.section-3-p {
    margin-top: 20px;
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.section-3-p1 {
    color: #D0D6F9;
    text-align: center;
    font-family: "Barlow Condensed";
    font-size: 14px;
    font-weight: 400;
}

.section-3-sub {
    display: flex;
    flex-direction: column;
    gap: 10px;

}

.section-3-p2 {
    color: #FFF;
    text-align: center;
    font-family: Bellefair;
    font-size: 28px;
    font-weight: 400;
}

